# car_spraying_ws

./: .gitignore  paint_thickness_matrix.csv
rl_checkpoints/: ppo.npz  td3.npz
rl_checkpoints/vision/: ppo.npz  td3.npz
src/: check_topics.py
src/car_spraying_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/car_spraying_moveit_config/config/: car_spraying_robot.ros2_control.xacro  car_spraying_robot.srdf  car_spraying_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  possible_issues.odt  ros2_controllers.yaml
src/car_spraying_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/car_spraying_robot/: CMakeLists.txt  package.xml  setup.py
src/car_spraying_robot/car_spraying_robot/: peya_subscriber.py
src/car_spraying_robot/config/: bridge.yaml  bridge_moveit.yaml  controllers.yaml  joint_names_UR3_Assembly_URDF.yaml
src/car_spraying_robot/launch/: joint_array_splitter.py  sim_control.launch.py  spawn_robot_moveit.launch.py  spawn_robot_moveit_rl.launch.py  spray_pipeline.launch.py  vision_rl_Manual.launch.py
src/car_spraying_robot/meshes/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
src/car_spraying_robot/models/: Spraying_Arm.sdf  Spraying_Arm_moveit.sdf
src/car_spraying_robot/urdf/: UR3_Assembly_URDF.csv  UR3_Assembly_URDF.urdf  UR3_Assembly_URDF_moveit.urdf
src/car_spraying_robot/worlds/: world_demo.sdf
src/car_spraying_spray_sim/: package.xml  setup.cfg  setup.py
src/car_spraying_spray_sim/car_spraying_spray_sim/: coverage_map_node.py  coverage_quality_node.py  spray_sim_node.py
src/car_spraying_spray_sim/data/: coverage_3d.csv
src/car_spraying_spray_sim/launch/: spray_sim.launch.py
src/car_spraying_spray_sim/rviz/: spray_sim.rviz
src/ob_detection/: package.xml  setup.cfg  setup.py
src/ob_detection/best/: data.pkl
src/ob_detection/best/.data/: serialization_id
src/ob_detection/best/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+257 more)
src/ob_detection/ob_detection/: Defect_detection_with_Coverage_Map.py  Defect_detection_with_Coverage_Map_connected.py  detection_node_fixed.py  ob_detection_chapter.tex  ply_marker_pub.py  vision_stream_window.py
src/ob_detection/ob_detection/config/: iphone_lidar_calibration.yaml
src/ob_detection/ob_detection/launch/: defect.launch.py  detection_launch.py
src/ob_detection/ob_detection/spray_paths/: latest_defect_matrix.npy  path_dim.csv
src/ob_detection/tests/: test_defect_detection_mask.py
src/painting_motion_controller/: CMakeLists.txt  package.xml  peya_validated.csv
src/painting_motion_controller/src/: cartesian_trajectory_controller.cpp  correction_pass.cpp  correction_pass.hpp  rl_agent_node.py  spray_common.cpp  spray_common.hpp  vision_pass_executor.cpp  vision_rl_agent.py
src/sensorstream_driver-main/: .gitignore  CMakeLists.txt  README.md  package.xml
src/sensorstream_driver-main/include/sensorstream_driver/: banner.hpp  protocol_handler.hpp
src/sensorstream_driver-main/proto/: sensor.proto
src/sensorstream_driver-main/src/: banner.cpp  protocol_handler.cpp  sensorstream_node.cpp
src/square_trajectory/: CMakeLists.txt  coverage_3d.csv  package.xml  peya.csv  peya_old.csv  peya_validated.csv
src/square_trajectory/src/: rl_agent_node.py  square_xz.cpp
src/trajectory_validator/: README.md  package.xml  setup.cfg  setup.py
src/trajectory_validator/config/: rviz2.rviz  sample_trajectory.csv  workspace.yaml
src/trajectory_validator/launch/: validate.launch.py
src/trajectory_validator/test/: test_trajectory_validator.py
src/trajectory_validator/trajectory_validator/: __init__.py  csv_loader.py  filter_and_forward.py  robot_workspace.py  trajectory_validator_node.py  validate_trajectory.py  visualize_workspace.py
