<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_spraying_spray_sim</name>
  <version>0.1.0</version>
  <description>
    Gaussian spray-cone simulation node for the car_spraying robotic arm.
    Subscribes to TF (end-effector pose) and publishes RViz cone markers,
    an accumulated paint PointCloud2, and spawns paint spheres in Gazebo.
  </description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <!-- FIX 5: Added missing dependency for Gazebo spawn service -->
  <depend>ros_gz_interfaces</depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>