<?xml version="1.0"?>
<package format="3">
  <name>sensorstream_driver</name>
  <version>0.1.0</version>
  <description>C++ ROS 2 driver for SensorStream iPhone sensor data</description>
  <maintainer email="martijn@example.com">Martijn Habers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>libprotobuf-dev</build_depend>
  <build_depend>protobuf-compiler</build_depend>
  <build_depend>libusbmuxd-dev</build_depend>

  <exec_depend>libprotobuf-dev</exec_depend>
  <exec_depend>libusbmuxd-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
